# MainControllerNew

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  devices.json  partitions.csv  pass.txt  sdkconfig  sdkconfig.old  version.txt
board/: .gitignore  MainBoard.brd  MainBoard.sch  _fix.txt
main/: CMakeLists.txt  CMakeLists.txt.bak  core.c  core.h  device-1.json  device-3.json  devices.json  devices2nd.json  dmx.c  dmx.h  ftp.c  ftp.h  main.c  modbus.c  modbus.h  mqtt.c  mqtt.h  network.c  network.h  ota.c  ota.h  rgb_strip.json  sdcard.c  sdcard.h  spiffs.c  spiffs.h  storage.c  storage.h  temp.c  temperatures.json  todo.txt  utils.c  utils.h  webServer.c  webServer.h
sd/config/: DMXdevices.json  devices.json  devices2.json  networkconfig.json  serviceconfig.json  temperatures.json
sd/web/: pageDevconfig.html  pageNetwork.html  pageService.html  pageStatus.html
sd/web/css/: main.css
sd/web/js/: pageDevconfig.js  pageDevinfo.js  pageLogs.js  pageNetwork.js  pageService.js  pageSystem.js
server_certs/: ca_cert.pem
web/: index.html  index_offline.html  pageDevinfo.html  pageLogs.html  pageNetwork.html  pageService.html  pageStatus.html  pageSystem.html  test.html
web/js/: pageDMXDevice_111.js  pageDevconfig.js  pageNetwork.js  pageService.js  pageStatus.js  pageSystem.js
