idf_component_register(SRCS "main.c"
                            "utils.c"
                            "storage.c"
                            "sdcard.c"
                            "spiffs.c"
                            "core.c"
                            "network.c"
                            "webServer.c"
                            "modbus.c"
                       INCLUDE_DIRS ".")

